force-app/main/default/objects/Tela__c/Tela__c.object-meta.xml
<CustomObject>
    <label>Tela</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>