force-app/main/default/objects/Tela__c/fields/PrecioIVA__c.field-meta.xml
<CustomField>
    <fullName>PrecioIVA__c</fullName>
    <label>Precio con IVA</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>