force-app/main/default/objects/Tela__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cristal</fullName>
            </value>
            <value>
                <fullName>Blackout</fullName>
            </value>
            <value>
                <fullName>Sunscreen</fullName>
            </value>
            <value>
                <fullName>Traslucidas</fullName>
            </value>
            <value>
                <fullName>Transparente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>