force-app/main/default/objects/Tela__c/fields/UnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadMedida__c</fullName>
    <label>Unidad Medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>